--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Energy - The Dance Between Consciousness and Form</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">14 minutes ago</div>
+                        <div class="date">43 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Embracing The Master | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Key to Transformation | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Judging criminal r/AITAH Posts #5</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>TRYING JAPANS HIGHEST RATED CANDY</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Noone Believed Him?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The system is rigged against you. Here's how</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Seeing the World Like a Child</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>Gold technical analysis in 5 minutes....</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1674,7 +1674,7 @@
                     <div class="video-info">
                         <h3>The number 1 problem with Day Trading strategies...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>The system is rigged against you. Here's how</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5886,7 +5886,7 @@
                         <div class="video-info">
                             <h3>Gold technical analysis in 5 minutes....</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6172,7 +6172,7 @@
                         <div class="video-info">
                             <h3>The number 1 problem with Day Trading strategies...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Energy - The Dance Between Consciousness and Form</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">14 minutes ago</div>
+                            <div class="date">43 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Embracing The Master | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>The Key to Transformation | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Seeing the World Like a Child</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Judging criminal r/AITAH Posts #5</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>TRYING JAPANS HIGHEST RATED CANDY</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Noone Believed Him?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
